Staging/PMKUSUM/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-pmkusum-service
  namespace: staging
spec:
  selector:
    app: staging-pmkusum-app
  ports:
    - protocol: "TCP"
      port: 9080
      targetPort: 8080
      # nodePort: 32000
  type: ClusterIP
