Staging/PMKUSUM/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-pmkusum-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: platform.tpcloud.tech
      http:
        paths:
          - path: /PMKUSUM/(.*)
            pathType: Prefix

            backend:

              service:

                name: staging-pmkusum-service

                port:

                  number: 9080
